# v-place

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  sample.env
.github/workflows/: deploy.yml
src/: main.rs
src/handlers/: mod.rs  p_handlers.rs
src/models/: err_models.rs  mod.rs  p_models.rs  scylla_models.rs
src/services/: mod.rs  p_services.rs
