[package]
name = "v-place"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.3"
serde = { version = "^1.0", features = ['derive'] }
serde_json = "^1.0"
serde_repr = "^0.1"
log = "^0.4"
env_logger = "^0.10"
dotenvy = "^0.15"
uuid = { version = "^1.4", features = ["v4", "serde"] }
actix-web-actors = "^4.2"
actix = "0.13"
redis = { version = "^0.23", default-features = false, features = [
  "tokio-comp",
  "connection-manager",
] }
scylla = "^0.9"
actix-cors = "0.6"
chrono = "^0.4"
[profile.dev.package.backtrace]
opt-level = 3
