[package]
name = "v-place"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.3"
serde = { version = "^1.0", features = ['derive'] }
serde_json = "^1.0"
log = "^0.4"
env_logger = "^0.10"
dotenvy = "^0.15"
uuid = { version = "^1.4", features = ["v4", "serde"] }
actix-web-actors = "^4.2"
actix = "0.13"
redis = { version = "^0.23", default-features = false, features = [
  "tokio-comp",
  "connection-manager",
] }
scylla = "^0.9"
actix-cors = "0.6"
chrono = { version = "^0.4", default-features = false }
mimalloc = { version = "^0.1", default-features = false }
num_cpus = "^1.16"
base64 = "^0.21"
tokio = { version = "^1.29", features = ["macros"] }
futures = "^0.3"
[profile.dev.package.backtrace]
opt-level = 3
